# iotd

./: .gitignore  BENCHMARKS.md  CLAUDE.md  Cargo.toml  Dockerfile  GEMINI.md  LICENSE  Makefile  README.md  build.rs  run_benchmarks.sh
.github/workflows/: build-release.yml  ci.yml  release.yml
benches/: broker_benchmark.rs  performance_benchmark.rs
docker/: Dockerfile
docs/: README.md  arch.md  documentation.html  features.html  getting-started.html  index.html  roadmap.html  roadmap.md  style.css
examples/: config.toml  load_test.rs  test_ipv6.rs  thread_monitor.rs  thread_test.rs
scripts/: install-hooks.sh
src/: broker.rs  config.rs  lib.rs  main.rs  router.rs  server.rs  session.rs  transport.rs
src/auth/: acl_file.rs  allow_all.rs  mod.rs  password_file.rs  traits.rs
src/config/: settings.rs
src/protocol/: mod.rs  packet.rs  v3.rs
src/server/: broker.rs  client.rs  mod.rs  session.rs
src/storage/: memory.rs  mod.rs  sqlite.rs  traits.rs  types.rs
tests/: debug_test.rs  full_packet_test.rs  integration_test.rs  packet_test.rs  qos1_test.rs  qos2_test.rs  simple_test.rs  tls_test.rs
